--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       text-decoration: none;
       transition: transform 0.2s ease, background-color 0.2s;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
     }
 
     .store-btn:hover {
@@ -318,7 +319,7 @@
                 </div>
               </a>
 
-              <a href="#" class="store-btn">
+              <a href="#" class="store-btn" onclick="alert('Android coming soon...'); return false;">
                 <i class="fab fa-android"></i>
                 <div class="btn-text">
                   <span>Download</span>
@@ -377,13 +378,20 @@
       }, 200);
     });
 
-    // Add smooth scrolling for anchors (if you add nav links later)
+    // Add smooth scrolling for anchors
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
+        // We prevent default if there's no onclick attribute, 
+        // but since we added onclick to the android button, that handles itself.
+        if(!this.getAttribute('onclick')) {
+            e.preventDefault();
+            const target = document.querySelector(this.getAttribute('href'));
+            if(target) {
+                target.scrollIntoView({
+                    behavior: 'smooth'
+                });
+            }
+        }
       });
     });
   </script>
