android apk added

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </div>
               </a>
 
-              <a href="#" class="store-btn" onclick="alert('Android coming soon...'); return false;">
+              <a href="./android_apks/nutriscan.apk" class="store-btn" download>
                 <i class="fab fa-android"></i>
                 <div class="btn-text">
                   <span>Download</span>
